--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,29 @@ br + div {
   color: red;
 }
 
+.flex_wrap {
+    width: 200px;
+    height: 200px;
+    border: 1px solid #c3c3c3;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.flex_wrap div {
+    width: 50px;
+    height: 50px;
+    border: 1px solid black;
+}
+
 .box1 {
   width: 300px;
   height: 100px;
   border: 1px solid blue;
   box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
 }
 
 .box2 {
