--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ br + div {
     height: 200px;
     border: 1px solid #c3c3c3;
     display: flex;
-    flex-direction: row;
+    flex-direction: row-reverse;
     flex-wrap: wrap;
 }
 
